2008-06-30  Les Harris  <me@lesharris.com>

	* configure.ac: Added dependency for gstreamer0.10

	* gnome-mud-schemas.in: Added new schema for MSP remote downloading.

	* ui/prefs.glade: Added ui for MSP remote downloading.

	* ui/main.glade: Added downloading ui.

	* src/Makefile.am: Added files for MSP.

	* src/mud-msp-telnet.[ch]: New files which implement MSP.

	* src/gnome-mud.c: Added gstreamer initialization.

	* src/mud-connection-view.[ch]:  Added ui for downloading. Fixed
	disconnect and reconnect callbacks to propery dispose of and create
	the telnet object.  Changed the netcode to make a chain of processing
	such that a later link in the chain does not execute until the current
	link is finished.

	* src/mud-window.c: Fixed history code to avoid a potential crash when
	the history queue is empty.

	* src/mud-preferences-window.[ch], src/mud-profile.[ch],
	src/gconf-helper.c: Added in code to handle the new msp preference.

	* src/mud-telnet-handlers.[ch]: Added in MSP option handlers.

	* src/mud-telnet.[ch]: Added in MSP support. Changed mud_telnet_process
	to use a buffer that persists across calls to better handle cases where
	telnet control codes are broken across packets.

	* src/utils.c: Changed strip_ansi to use a GString to ensure a valid
	string return when malformed data is passed.

2008-06-27  Les Harris  <me@lesharris.com>

	* gnome-mud-schemas.in: Added in the new schemas for the new gconf
	preferences.

	* src/mud-window.c: Made the text entry widget auto-grab focus when
	the terminal comes into focus.

	* src/*.[ch]: Removed trailing whitespace in all source files.

2008-06-26  Les Harris  <me@lesharris.com>

	* src/Makefile.am: Added mud-telnet-zmp.[ch]

	* src/mud-telnet.[ch]: Added support for ZMP, removed debugging messages.

	* src/mud-connection-view.c: Added function call to clean up after ZMP.

2008-06-25  Les Harris  <me@lesharris.com>

	* ui/*.glade: Updated windows hints and made every window resizable to
	increase usability.
