@@ -25,6 +25,8 @@ AC_CANONICAL_TARGET([])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config.h])
 
+PKG_PROG_PKG_CONFIG(0.9.0)
+
 dnl Release date on LSM format (date +%d%b%y).
 LSMDATE="12Feb2004"
 AC_SUBST(LSMDATE)
@@ -59,19 +61,21 @@ PCRE_REQUIRED=6.0.0
 GCONF_REQUIRED=0.20
 GSTREAMER_REQUIRED=0.10
 
-PKG_CHECK_MODULES(GMUD, gtk+-2.0 >= $GTK_REQUIRED vte >= $VTE_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED libpcre >= $PCRE_REQUIRED gmodule-2.0 >= $GMODULE_REQUIRED gnet-2.0 >= $LIBGNET_REQUIRED gconf-2.0 >= $GCONF_REQUIRED gstreamer-0.10 >= $GSTREAMER_REQUIRED)
+PKG_CHECK_MODULES(GMUD, gtk+-2.0 >= $GTK_REQUIRED vte >= $VTE_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED libpcre >= $PCRE_REQUIRED gmodule-2.0 >= $GMODULE_REQUIRED gnet-2.0 >= $LIBGNET_REQUIRED gconf-2.0 >= $GCONF_REQUIRED)
 AC_SUBST(GMUD_CFLAGS)
 AC_SUBST(GMUD_LIBS)
-
 
 dnl Checks for programs.
 AC_PROG_CC
 AC_ISC_POSIX
-dnl AC_SYS_LARGEFILE
 
 dnl Checks for header files.
 AC_HEADER_STDC
+AC_HEADER_DIRENT
+AC_HEADER_TIME
 AC_CHECK_HEADERS(fcntl.h unistd.h malloc.h termios.h termio.h limits.h getopt.h regex.h)
+AC_CHECK_HEADERS(fcntl.h strings.h unistd.h)
+AC_CHECK_HEADERS(sys/time.h)
 
 AC_DEFINE(HAVE_LIBSM, 1, [Define this to have session management.])
 
@@ -102,97 +106,33 @@ if test "x$enable_mccp" != "xno"; then
 	fi
 fi
 AM_CONDITIONAL(USE_MCCP, test "x$enable_mccp" = xyes)
-
 AC_SUBST(Z_LIBS)
 
-dnl Check whether to include Python support
-dnl AC_ARG_WITH(python,
-dnl [  --without-python        disable use of python scripting],
-dnl         python=$withval, python=python)
+dnl Check whether to include GStreamer code or not
+AC_ARG_ENABLE(gstreamer,
+	AC_HELP_STRING([--enable-gstreamer],
+		       [Enable GStreamer Used for MSP (Mud Sound Protocol)]),,
+		enable_gstreamer=auto)
+if test "x$enable_gstreamer" != "xno"; then
+	PKG_CHECK_EXISTS(gstreamer-0.10, have_gst=yes, have_gst=no)	
+	if test "x$have_gst" = "xno" -a "x$enable_gstreamer" = "xyes"; then
+	  AC_MSG_ERROR([Gstreamer support explicitly requested but libgstreamer was not found])
+	fi
+	if test "x$have_gst" = "xyes"; then
+	  AC_DEFINE(ENABLE_GST, 1, [Define if GStreamer should be enabled])
+	  enable_gstreamer=yes
+	  PKG_CHECK_MODULES(MSP, gstreamer-0.10 >= $GSTREAMER_REQUIRED)
+	fi
+fi
+AM_CONDITIONAL(USE_GSTREAMER, test "x$enable_gstreamer" = xyes)
+AC_SUBST(MSP_CFLAGS)
+AC_SUBST(MSP_LIBS)
 
 dnl Checks for programs.
 AC_ISC_POSIX
-dnl AC_PROG_CC
 AM_PROG_CC_STDC
 AC_PROG_LN_S
 AC_PROG_INSTALL
-
-AC_CHECK_LIB(socket,socket)
-AC_CHECK_LIB(nsl,connect)
-
-AC_CHECK_HEADERS(dlfcn.h dl.h)
-AC_CHECK_LIB(dl, dlopen, DL_LIB="-ldl",[
-	AC_CHECK_LIB(dld, shl_load, DL_LIB="-ldld",[
-	AC_CHECK_FUNCS(dlopen, DL_LIB="",
-	AC_MSG_ERROR(Dynamic linking is not available on this platform.))])])
-AC_SUBST(DL_LIB)
-
-dnl Checks for header files.
-AC_HEADER_STDC
-AC_HEADER_DIRENT
-AC_CHECK_HEADERS(fcntl.h strings.h unistd.h)
-AC_CHECK_HEADERS(telnet.h arpa/telnet.h sys/time.h)
-
-AC_HEADER_TIME
-
-dnl Checks for Python
-dnl if test "$python" != no; then
-dnl 	AC_PATH_PROG(pythonpath, $python)
-dnl 	if test "_$pythonpath" = _ ; then
-dnl 		python=no
-dnl 	else
-dnl 		AC_MSG_CHECKING([for Python version >= 2.x])
-dnl 		PY_PREFIX=`$pythonpath -c 'import sys ; print sys.prefix'`
-dnl 		PY_EXEC_PREFIX=`$pythonpath -c 'import sys ; print sys.exec_prefix'`
-dnl 		changequote(<<, >>)dnl
-dnl 		PY_VERSION=`$pythonpath -c 'import sys ; print sys.version[0:3]'`
-dnl 		PY_MAJOR=`$pythonpath -c 'import sys ; print sys.version[0:2]'`
-dnl 		changequote([, ])dnl
-dnl 		if test "$PY_MAJOR" = "1."; then
-dnl 			python=no
-dnl 			AC_MSG_RESULT([no, atlest Python 2.x is needed])
-dnl 		else
-dnl 			AC_MSG_RESULT([yes, Python $PY_VERSION])
-dnl 			AC_MSG_CHECKING(for Python compile flags)
-dnl
-dnl 			if test -f $PY_PREFIX/include/python$PY_VERSION/Python.h; then
-dnl 				PY_LIBS="-lpython$PY_VERSION"
-dnl 				PY_LIB_LOC="-L$PY_EXEC_PREFIX/lib/python$PY_VERSION/config"
-dnl 				PY_CFLAGS="-I$PY_PREFIX/include/python$PY_VERSION"
-dnl 				AC_DEFINE(USE_PYTHON, 1, [Define this to enable python scripting support.])
-dnl 				AC_MSG_RESULT([ok])
-dnl 				AC_CHECK_LIB(pthread, pthread_create, )
-dnl 				dnl needed for freebsd
-dnl 				AC_CHECK_LIB(c_r, pthread_create, )
-dnl 				dnl needed for python 2.x
-dnl 				AC_CHECK_LIB(util, openpty, )
-dnl 				AC_CHECK_LIB(db, dbopen, )
-dnl 				CFLAGS="$CFLAGS $PY_CFLAGS"
-dnl 				CPPFLAGS="$CPPFLAGS $PY_CFLAGS"
-dnl 				LIBS="$LIBS $PY_LIB_LOC $PY_LIBS"
-dnl
-dnl 				dnl PyGTK
-dnl 				PKG_CHECK_MODULES(PYGTK, pygtk-2.0 >= 1.99.13, [
-dnl 					AC_DEFINE(USE_PYGTK, 1, [Define this if you want PyGtk support in Python scripts.])
-dnl 					CFLAGS="$CFLAGS $PYGTK_CFLAGS"
-dnl 					LIBS="$LIBS $PYGTK_LIBS"
-dnl 				])
-dnl 			else
-dnl 				python=no
-dnl 				AC_MSG_RESULT([Can't find Python.h])
-dnl 			fi
-dnl 		fi
-dnl 	fi
-dnl fi
-
-dnl python is usually linked against -lm on solaris
-dnl if test "$system" = "SunOS"; then
-dnl 	if test "$python" != "no"; then
-dnl 		if test -z "`echo "$LIBS" | grep '\-lm ' 2>/dev/null`" ; then
-dnl 			LIBS="$LIBS -lm"
-dnl 		fi
-dnl 	fi
-dnl fi
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -244,6 +184,16 @@ else
 	AC_MSG_NOTICE([    * Mapper support is disabled])
 fi
 
+if test "x$enable_gstreamer" = xyes; then
+	AC_MSG_NOTICE([    * GStreamer support is enabled])
+else
+	AC_MSG_NOTICE([    * GStreamer support is disabled])
+fi
+
 if test -d $srcdir/.svn; then
 	AC_MSG_WARN([You're using a svn version. Expect problems.])
+fi
+
+if test -d $srcdir/.git; then
+	AC_MSG_WARN([You're using a git version. Expect problems.])
 fi
